--- a/4.4 Band Generator Project/views/index.ejs
+++ b/4.4 Band Generator Project/views/index.ejs
@@ -1,6 +1,11 @@
 <!-- Step 3 Add Header -->
-
-
+<%- include("partials/header.ejs") %>
+<% if (locals.adjective){ %>
+ <h1><%= adjective %>
+ <%=  noun %></h1>
+ <% }else { %>
+  <h1>Welcome to the Band Generator 🤟</h1>
+  <% } %>
 <!-- Step 2 - If an adjective and noun are sent to this ejs file, 
     Change the h1 to show the adjective and noun.
     But when the user first goes on the website and there is no adjective and noun, 
@@ -10,3 +15,4 @@
   <input type="submit" value="Generate Name">
 </form>
 <!-- Step 3 Add Footer -->
+<%- include("partials/footer.ejs") %>
